# poker-ocaml

./: dune-project  flake.nix  poker.opam
lib/: card.ml  deck.ml
test/: dune
