(lang dune 3.17)

(name poker)

(generate_opam_files true)

(source
 (github marcustut/poker))

(authors "Marcus Lee <marcustutorial@hotmail.com>")

(maintainers "Marcus Lee <marcustutorial@hotmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name poker)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
